--- a/portal-empleo-frontend/src/app/offers/offers.component.html
+++ b/portal-empleo-frontend/src/app/offers/offers.component.html
@@ -163,22 +163,12 @@
     <div class="logo">
     </div>
   </div>
-  <div class="wrapper">
+
+  <div class="wrapper"> 
+    <div><h1 class="title-portal">BIENVENIDO A TU NUEVO EMPLEO!</h1></div> 
     <div class="search-menu">
       <div class="search-bar">
-        <input type="text" class="search-box" autofocus />
-        <div class="search item">Product Designer
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3"
-            stroke-linecap="round" stroke-linejoin="round" class="feather feather-x">
-            <path d="M18 6L6 18M6 6l12 12" />
-          </svg>
-        </div>
-        <div class="search item">UI Designer
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3"
-            stroke-linecap="round" stroke-linejoin="round" class="feather feather-x">
-            <path d="M18 6L6 18M6 6l12 12" />
-          </svg>
-        </div>
+        <input type="text" placeholder="Filtra tu empleo">
       </div>
       <div class="search-location">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
@@ -186,7 +176,7 @@
           <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0118 0z" />
           <circle cx="12" cy="10" r="3" />
         </svg>
-        Londontowne, MD
+        <input type="text" placeholder="Selecciona tu ciudad">
       </div>
       <div class="search-job">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
@@ -194,7 +184,7 @@
           <rect x="2" y="7" width="20" height="14" rx="2" ry="2" />
           <path d="M16 21V5a2 2 0 00-2-2h-4a2 2 0 00-2 2v16" />
         </svg>
-        <input type="text" placeholder="Job Type">
+        <input type="text" placeholder="Años de experiencia">
       </div>
       <div class="search-salary">
         <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" stroke="currentColor" fill="currentColor"
@@ -210,211 +200,184 @@
             stroke="currentColor" />
           <path d="M23.3 6H.6a.8.8 0 010-1.5h22.6a.8.8 0 010 1.5z" stroke="currentColor" />
         </svg>
-        <input type="text" placeholder="Salary Range">
+        <input type="text" placeholder="Rango de salario">
       </div>
-      <button class="search-button">Find Job</button>
+      <button class="search-button">Buscar Trabajo</button>
     </div>
     <div class="main-container">
       <div class="search-type">
         <div class="alert">
           <div class="alert-title">Crear una alerta para trabajo</div>
-          <div class="alert-subtitle">crea una oferta para no perderte ninguno</div>
+          <div class="alert-subtitle">permitenos enviarte alertas para no perderte ningun trabajo</div>
           <input type="text" placeholder="Ingresa tu correo">
-          <button class="search-buttons">Suscribirme</button>
+         <div><button class="search-buttons">Suscribirme</button></div>
         </div>
         <div class="job-time">
-          <div class="job-time-title">Type of Employment</div>
-          <div class="job-wrapper">
-            <div class="type-container">
-              <input type="checkbox" id="job1" class="job-style" checked>
-              <label for="job1">Full Time Jobs</label>
-              
-            </div>
-            <div class="type-container">
-              <input type="checkbox" id="job2" class="job-style">
-              <label for="job2">Part Time Jobs</label>
-              
-            </div>
-            <div class="type-container">
-              <input type="checkbox" id="job3" class="job-style">
-              <label for="job3">Remote Jobs</label>
-             
-            </div>
-            <div class="type-container">
-              <input type="checkbox" id="job4" class="job-style">
-              <label for="job4">Internship Jobs</label>
-             
-            </div>
-            <div class="type-container">
-              <input type="checkbox" id="job5" class="job-style">
-              <label for="job5">Contract</label>
-              
-            </div>
-            <div class="type-container">
-              <input type="checkbox" id="job6" class="job-style">
-              <label for="job6">Training Jobs</label>
-              
-            </div>
-          </div>
-        </div>
-        <div class="job-time">
-          <div class="job-time-title">Seniority Level</div>
-          <div class="job-wrapper">
-            <div class="type-container">
-              <input type="checkbox" id="job7" class="job-style">
-              <label for="job7">Student Level</label>
-            
-            </div>
-            <div class="type-container">
-              <input type="checkbox" id="job8" class="job-style">
-              <label for="job8">Entry Level</label>
-              
-            </div>
-            <div class="type-container">
-              <input type="checkbox" id="job9" class="job-style" checked>
-              <label for="job9">Mid Level</label>
-            
-            </div>
-            <div class="type-container">
-              <input type="checkbox" id="job10" class="job-style" checked>
-              <label for="job10">Senior Level</label>
-              
-            </div>
-            <div class="type-container">
-              <input type="checkbox" id="job11" class="job-style">
-              <label for="job11">Directors</label>
-             
-            </div>
-            <div class="type-container">
-              <input type="checkbox" id="job12" class="job-style">
-              <label for="job12">VP or Above</label>
-              
-            </div>
-          </div>
-        </div>
-        <div class="job-time">
-          <div class="job-time-title">Salary Range</div>
+          <div class="job-time-title">Tipo De Empleo</div>
           <div class="job-wrapper">
             <div class="type-container">
               <input type="checkbox" id="job1" class="job-style">
-              <label for="job1">$700 - $1000</label>
-             
+              <label for="job1">Tiempo Completo</label>
+
             </div>
             <div class="type-container">
               <input type="checkbox" id="job2" class="job-style">
-              <label for="job2">$1000 - $1200</label>
-              >
+              <label for="job2">Media Jornada</label>
+
             </div>
             <div class="type-container">
               <input type="checkbox" id="job3" class="job-style">
-              <label for="job3">$1200 - $1400</label>
-            
+              <label for="job3">Trabajo Remoto</label>
+
             </div>
             <div class="type-container">
               <input type="checkbox" id="job4" class="job-style">
-              <label for="job4">$1500 - $1800</label>
-             
+              <label for="job4">Practicante</label>
+
             </div>
             <div class="type-container">
-              <input type="checkbox" id="job5" class="job-style" checked>
-              <label for="job5">$2000 - $3000</label>
-              
+              <input type="checkbox" id="job5" class="job-style">
+              <label for="job5">Sin Experiencia</label>
+            </div>
+          </div>
+        </div>
+        <div class="job-time">
+          <div class="job-time-title">Filtrar Empresas</div>
+          <div class="job-wrapper">
+            <div class="type-container">
+              <input type="checkbox" id="job7" class="job-style">
+              <label for="job7">Microsoft</label>
+
             </div>
             <div class="type-container">
-              <input type="checkbox" id="job6" class="job-style" checked>
-              <label for="job6">$3000 - $4000</label>
-            
+              <input type="checkbox" id="job8" class="job-style">
+              <label for="job8">Netflix</label>
+
+            </div>
+            <div class="type-container">
+              <input type="checkbox" id="job9" class="job-style">
+              <label for="job9">Pepsi</label>
+
+            </div>
+            <div class="type-container">
+              <input type="checkbox" id="job10" class="job-style">
+              <label for="job10">Subway</label>
+
+            </div>
+            <div class="type-container">
+              <input type="checkbox" id="job11" class="job-style">
+              <label for="job11">Mazda</label>
+
+            </div>
+            <div class="type-container">
+              <input type="checkbox" id="job12" class="job-style">
+              <label for="job12">Spotify</label>
+            </div>
+          </div>
+        </div>
+        <div class="job-time">
+          <div class="job-time-title">Rango De Salario</div>
+          <div class="job-wrapper">
+            <div class="type-container">
+              <input type="checkbox" id="job1" class="job-style">
+              <label for="job1">$100</label>
+
+            </div>
+            <div class="type-container">
+              <input type="checkbox" id="job2" class="job-style">
+              <label for="job2">$200</label>
+
+            </div>
+            <div class="type-container">
+              <input type="checkbox" id="job3" class="job-style">
+              <label for="job3">$300</label>
+
+            </div>
+            <div class="type-container">
+              <input type="checkbox" id="job4" class="job-style">
+              <label for="job4">$400</label>
+
+            </div>
+            <div class="type-container">
+              <input type="checkbox" id="job5" class="job-style">
+              <label for="job5">$500</label>
+
             </div>
             <div class="type-container">
               <input type="checkbox" id="job6" class="job-style">
-              <label for="job6">$4000 - $5000</label>
-            
+              <label for="job6">$600</label>
+
+            </div>
+            <div class="type-container">
+              <input type="checkbox" id="job6" class="job-style">
+              <label for="job6">$800</label>
             </div>
           </div>
         </div>
       </div>
       <div class="searched-jobs">
         <div class="searched-bar">
-          <div class="searched-show">Showing 46 Jobs</div>
-          <div class="searched-sort">Sort by: <span class="post-time">Newest Post </span><span
-              class="menu-icon">▼</span></div>
+          <div class="searched-show">Mostrando 20 Trabajos</div>
         </div>
         <div class="job-cards">
           <div class="job-card">
             <div class="job-card-header">
-              <svg viewBox="0 -13 512 512" xmlns="http://www.w3.org/2000/svg" style="background-color:#2e2882">
-                <g fill="#feb0a5">
-                  <path
-                    d="M256 92.5l127.7 91.6L512 92 383.7 0 256 91.5 128.3 0 0 92l128.3 92zm0 0M256 275.9l-127.7-91.5L0 276.4l128.3 92L256 277l127.7 91.5 128.3-92-128.3-92zm0 0" />
-                  <path d="M127.7 394.1l128.4 92 128.3-92-128.3-92zm0 0" />
-                </g>
-                <path
-                  d="M512 92L383.7 0 256 91.5v1l127.7 91.6zm0 0M512 276.4l-128.3-92L256 275.9v1l127.7 91.5zm0 0M256 486.1l128.4-92-128.3-92zm0 0"
-                  fill="#feb0a5" />
-              </svg>
+             <img src="../../assets/casa-barrio-los-colores-APA1652671550148294-260.jpg" width="60px" height="60px" class="img-1">
               <div class="menu-dot"></div>
             </div>
-            <div class="job-card-title">UI / UX Designer</div>
+            <div class="job-card-title">Agente Inmobiliario</div>
             <div class="job-card-subtitle">
-              The User Experience Designer position exists to create compelling and digital user experience through
-              excellent design...
+              Importante empresa dentro del sector inmobiliario requiere para su equipo de trabajo un agente inmobiliario
+              con excelente habilidades para trabajar en el sector
             </div>
             <div class="job-detail-buttons">
-              <button class="search-buttons detail-button">Full Time</button>
-              <button class="search-buttons detail-button">Min. 1 Year</button>
-              <button class="search-buttons detail-button">Senior Level</button>
+              <button class="search-buttons detail-button">Tiempo Completo</button>
+              <button class="search-buttons detail-button">1 año exp</button>
+              <button class="search-buttons detail-button">Medellin</button>
             </div>
             <div class="job-card-buttons">
-              <button class="search-buttons card-buttons">Apply Now</button>
-              <button class="search-buttons card-buttons-msg">Messages</button>
+              <button class="search-buttons card-buttons">Aplicar Ahora</button>
+              <button class="search-buttons card-buttons-msg">Enviar Mensaje</button>
             </div>
           </div>
           <div class="job-card">
             <div class="job-card-header">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" style="background-color:#f76754">
-                <path xmlns="http://www.w3.org/2000/svg" d="M0 .5h4.2v23H0z" fill="#042b48" data-original="#212121" />
-                <path xmlns="http://www.w3.org/2000/svg" d="M15.4.5a8.6 8.6 0 100 17.2 8.6 8.6 0 000-17.2z"
-                  fill="#fefefe" data-original="#f4511e" />
-              </svg>
+             <img src="../../assets/jumbo-logo-bulevar.png" width="60px" height="60px" class="img-1">
               <div class="menu-dot"></div>
             </div>
-            <div class="job-card-title">Sr. Product Designer</div>
+            <div class="job-card-title">Cajero En Centro Comercial Jumbo</div>
             <div class="job-card-subtitle">
-              The User Experience Designer position exists to create compelling and digital user experience through
-              excellent design...
+              En jumbo estamos reclutando personal para servir de cajero en nuestras tiendas comerciales,
+              necesitamos que tenga excelente actitud y tenga disponibilidad
             </div>
             <div class="job-detail-buttons">
-              <button class="search-buttons detail-button">Full Time</button>
-              <button class="search-buttons detail-button">Min. 1 Year</button>
-              <button class="search-buttons detail-button">Senior Level</button>
+              <button class="search-buttons detail-button">Media Jornada</button>
+              <button class="search-buttons detail-button">1 año exp</button>
+              <button class="search-buttons detail-button">Bogota</button>
             </div>
             <div class="job-card-buttons">
-              <button class="search-buttons card-buttons">Apply Now</button>
-              <button class="search-buttons card-buttons-msg">Messages</button>
+              <button class="search-buttons card-buttons">Aplicar ahora</button>
+              <button class="search-buttons card-buttons-msg">Enviar Mensaje</button>
             </div>
           </div>
           <div class="job-card">
             <div class="job-card-header">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" fill="#fff"
-                style="background-color:#55acee">
-                <path
-                  d="M512 97.2c-19 8.4-39.3 14-60.5 16.6 21.8-13 38.4-33.4 46.2-58a209.8 209.8 0 01-66.6 25.4A105 105 0 00249.5 153c0 8.3.8 16.3 2.5 24A297.1 297.1 0 0135.6 67 105.1 105.1 0 0068 207.4c-16.9-.3-33.4-5.2-47.4-12.9v1.1c0 51 36.4 93.4 84 103.2-8.5 2.3-17.8 3.4-27.4 3.4-6.8 0-13.5-.3-20-1.8a106 106 0 0098.2 73.2A211 211 0 010 416.9 295.5 295.5 0 00161 464c193.2 0 298.8-160 298.8-298.7 0-4.6-.2-9.1-.4-13.6A209.4 209.4 0 00512 97.2z" />
-              </svg>
+              <img src="../../assets/0f55e11982d01bf4385ab673fc54ccb4.jpg" width="70px" height="100px" class="img-1">
               <div class="menu-dot"></div>
             </div>
-            <div class="job-card-title">User Experience Designer</div>
+            <div class="job-card-title">Data Ciencia Ingeniero</div>
             <div class="job-card-subtitle">
-              The User Experience Designer position exists to create compelling and digital user experience through
-              excellent design...
+              Ibm esta en busquedad de un candidato el cual desempeñarse bien dentro del area de las ciencias computacionales,
+              que posea alta habilidad y destreza para llevar a cabo sus funcionalidades
             </div>
             <div class="job-detail-buttons">
-              <button class="search-buttons detail-button">Full Time</button>
-              <button class="search-buttons detail-button">Min. 1 Year</button>
-              <button class="search-buttons detail-button">Senior Level</button>
+              <button class="search-buttons detail-button">Tiempo Completo</button>
+              <button class="search-buttons detail-button">4 años exp</button>
+              <button class="search-buttons detail-button">Cartagena</button>
             </div>
             <div class="job-card-buttons">
-              <button class="search-buttons card-buttons">Apply Now</button>
-              <button class="search-buttons card-buttons-msg">Messages</button>
+              <button class="search-buttons card-buttons">Aplicar Ahora</button>
+              <button class="search-buttons card-buttons-msg">Enviar Mensaje</button>
             </div>
           </div>
           <div class="job-card">
@@ -928,4 +891,3 @@
     </div>
   </div>
 </div>
-
