creacion, de varios componentes y varios arreglos

--- a/portal-empleo-frontend/src/app/login-recluiter/login-recluiter.component.html
+++ b/portal-empleo-frontend/src/app/login-recluiter/login-recluiter.component.html
@@ -1,12 +1,12 @@
-<img class="wave" src="../../assets/wave(9).png">
+<img class="wave" src="../../assets/wave(51).png">
 <div class="container">
     <div>
-        <img src="../../assets/employeer.png" class="img-emplo">
+        <img src="../../assets/My project-1.png" class="img-emplo">
     </div>
     <div class="login-content">
         <form action="index.html" (ngSubmit)="login()" [formGroup]="loginForm">
-            <div class="custom-div"><img src="../../assets/eje.jpg" class="custom"></div>
-            <h2 class="title">Bienvenido</h2>
+            <div class="custom-div"><img src="../../assets/contratos.jpg" class="custom"></div>
+            <h3 class="title">Bienvenido Reclutador</h3>
             <div class="input-div one">
                 <div class="i">
                     <i class="fas fa-user"></i>
@@ -38,7 +38,7 @@
                     title="clic para mostrar contraseña" (click)="mostrarPass()">
                 &nbsp;&nbsp;Mostrar Contraseña
             </div>
-            <a href="/register" class="forgotpass" (click)="clickRegister()">No tienes Cuenta?, Registrate</a>
+            <a href="/register-recluiter" class="forgotpass" (click)="clickRegister()">No tienes Cuenta?, Registrate</a>
             <input type="submit" class="btn" [disabled]="loginForm.invalid" value="Iniciar Sesión">
             <a href="#" class="forgotpass">Contraseña olvidada?</a>
         </form>
