--- a/portal-empleo-frontend/src/app/main/main.component.html
+++ b/portal-empleo-frontend/src/app/main/main.component.html
@@ -3,11 +3,12 @@
         <div class="wrapper">
             <div class="portal-card recluiter">
                 <div class="portal-card__image portal-card__image--recluiter">
-                    <img src="../../assets/consultoria-removebg.png" alt="recluiter" />
+                    <img src="../../assets/consultoria-removebg.png" alt="recluiter">
                 </div>
-                <div class="portal-card__level portal-card__level--recluiter">Busca Tu Candidato Ideal</div>
-                <div class="portal-card__unit-name">PAGINA PARA RECLUTADORES</div>
-                <div class="portal-card__unit-description">
+                <div class="portal-card__level portal-card__level--recluiter" (click)="onClickRecluiter()">Busca Tu
+                    Candidato Ideal</div>
+                <div class="portal-card__unit-name" (click)="onClickRecluiter()">PAGINA PARA RECLUTADORES</div>
+                <div class="portal-card__unit-description" (click)="onClickRecluiter()">
                     Bienvenido al portal de busqueda de empleo, aqui encontraras diferentes opciones para encontrar a tu
                     candidato ideal!
                 </div>
