creacion UI de creacion empleos

--- a/portal-empleo-frontend/src/app/navbar-recluiter/navbar-recluiter.component.html
+++ b/portal-empleo-frontend/src/app/navbar-recluiter/navbar-recluiter.component.html
@@ -1,4 +1,4 @@
-<nav class="bg-violet-900">
+<nav class="bg-indigo-900">
     <div class="max-w-7xl mx-auto px-2 sm:px-6 lg:px-8">
       <div class="relative flex items-center justify-between h-16">
         <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
@@ -25,18 +25,18 @@
             <div class="flex space-x-4">
               <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
               <a href="/create-offers" class="bg-gray-900 text-white px-3 py-2 rounded-md text-sm font-bold"
-                aria-current="page">Ofertas De Trabajo</a>
+                aria-current="page">Crear Vacante</a>
   
               <a href="#"
-                class="text-slate-50 hover:bg-sky-800 hover:text-white px-3 py-2 rounded-md text-sm font-bold">Empresas</a>
+                class="text-slate-50 hover:bg-sky-800 hover:text-white px-3 py-2 rounded-md text-sm font-bold">Tus empleos creados</a>
   
               <a href="#"
-                class="text-slate-50 hover:bg-sky-800 hover:text-white px-3 py-2 rounded-md text-sm font-bold">Crea Tu
-                Curriculum</a>
+                class="text-slate-50 hover:bg-sky-800 hover:text-white px-3 py-2 rounded-md text-sm font-bold">
+                Revisar Curriculum</a>
   
               <a href="#"
                 class="text-slate-50 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-bold">Tus
-                Postulaciones</a>
+                Candidatos</a>
             </div>
           </div>
         </div>
@@ -63,15 +63,15 @@
                   src="https://www.educaccionperu.org/wp-content/uploads/2020/04/myAvatar.png" alt="">
               </button>
             </div>
-            <div
+            <!--div
               class="origin-top-right absolute right-0 mt-2 w-48 rounded-md shadow-lg py-1 bg-white ring-1 ring-black ring-opacity-5 focus:outline-none"
               role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1">
               <!-- Active: "bg-gray-100", Not Active: "" -->
-              <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1"
+              <!--a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1"
                 id="user-menu-item-0">Tu Perfil</a>
               <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1"
-                id="user-menu-item-2">Cerrar Sesion</a>
-            </div>
+                id="user-menu-item-2">Cerrar Sesion</a -->
+            <!--/div -->
           </div>
         </div>
       </div>
