--- a/portal-empleo-frontend/src/app/create-offers/create-offers.component.html
+++ b/portal-empleo-frontend/src/app/create-offers/create-offers.component.html
@@ -1,2 +1,177 @@
 <app-navbar-recluiter></app-navbar-recluiter>
-<p>HOLA COMO ESTAS</p>
+
+<section class="bg-white dark:bg-indigo-900">
+    <div class="container flex flex-col px-6 py-10 mx-auto space-y-6 lg:h-[32rem] lg:py-16 lg:flex-row lg:items-center">
+        <div class="w-full lg:w-1/2 ">
+            <div class="lg:max-w-lg">
+                <h1 class="text-3xl font-bold tracking-wide text-gray-800 dark:text-white lg:text-5xl">
+                    Fácil Manera De Conseguir Candidatos
+                </h1>
+                <div class="mt-8 space-y-5">
+                    <p class="flex items-center -mx-2 text-gray-700 dark:text-gray-200">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 mx-2 text-blue-500" fill="none"
+                            viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                        </svg>
+
+                        <span class="mx-2">Olvídate de metodos complicados, crea tu vacante</span>
+                    </p>
+
+                    <p class="flex items-center -mx-2 text-gray-700 dark:text-gray-200">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 mx-2 text-blue-500" fill="none"
+                            viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                        </svg>
+
+                        <span class="mx-2">Seguimiento a Candidatos, de manera virtual</span>
+                    </p>
+
+                    <p class="flex items-center -mx-2 text-gray-700 dark:text-gray-200">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 mx-2 text-blue-500" fill="none"
+                            viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                        </svg>
+
+                        <span class="mx-2">Todo en una sola web, hazte con el mejor talento!</span>
+                    </p>
+                </div>
+            </div>
+
+            <div
+                class="w-full mt-8 bg-transparent border rounded-md lg:max-w-sm dark:border-gray-700 focus-within:border-blue-400 focus-within:ring focus-within:ring-blue-300 dark:focus-within:border-blue-400 focus-within:ring-opacity-40">
+                <form class="flex flex-col lg:flex-row">
+                    <input type="email" placeholder="Mantente alerta a tus candidatos"
+                        class="flex-1 h-10 px-4 py-2 m-1 text-gray-700 placeholder-gray-400 dark:text-gray-200 focus:outline-none focus:placeholder-transparent focus:ring-0" />
+
+                    <button type="button"
+                        class="h-10 px-4 py-2 m-1 text-white transition-colors duration-200 transform bg-blue-500 rounded-md hover:bg-blue-400 focus:outline-none focus:bg-blue-400">
+                        Suscribete
+                    </button>
+                </form>
+            </div>
+        </div>
+
+        <div class="flex items-center justify-center w-full h-96 lg:w-1/2">
+            <img class="object-cover w-full h-full mx-auto rounded-md lg:max-w-2xl" src="../../assets/reclutamient.png"
+                alt="glasses photo">
+        </div>
+    </div>
+</section>
+
+
+
+<div class="hidden sm:block" aria-hidden="true">
+    <div class="py-5">
+
+        <div class="border-t border-gray-200"></div>
+    </div>
+    <p class="custom-title">CREA TU PRIMERA VACANTE </p>
+</div>
+
+<div class="container-vacancy">
+
+    <div class="mt-3 sm:mt-0">
+        <div class="md:grid md:grid-cols-2 md:gap-2 ">
+            <div class="md:col-span-5">
+            </div>
+            <img src="../../assets/wave(1).png" class="wave" width="380px">
+            <form action="#" method="POST">
+                <div class="shadow overflow-hidden sm:rounded-md shadow-lg">
+                    <div class="px-5 py-5 bg-white sm:p-6">
+                        <div class="grid grid-cols-3 gap-3">
+                            <div class="col-span-6 sm:col-span-5">
+                                <label for="first-name" class="block text-sm font-medium text-gray-700">
+                                    Nombre De Empleo</label>
+                                <input type="text" name="first-name" id="first-name" autocomplete="given-name"
+                                    class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                            </div>
+
+                            <div class="col-span-6 sm:col-span-5">
+                                <label for="last-name"
+                                    class="block text-sm font-medium text-gray-700">Descripción</label>
+                                <input type="text" name="last-name" id="last-name" autocomplete="family-name"
+                                    class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                            </div>
+
+                            <div class="col-span-6 sm:col-span-2">
+                                <label for="country" class="block text-sm font-medium text-gray-700">Salario
+                                    Establecido</label>
+                                <select id="country" name="country" autocomplete="country-name"
+                                    class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+                                    <option>Selecciona una opción</option>
+                                    <option>100</option>
+                                    <option>200</option>
+                                    <option>300</option>
+                                    <option>400</option>
+                                    <option>500</option>
+                                    <option>600</option>
+                                    <option>700</option>
+                                    <option>800</option>
+                                    <option>900</option>
+                                </select>
+                            </div>
+                            <div class="col-span-6 sm:col-span-3">
+                                <label for="country" class="block text-sm font-medium text-gray-700">Ciudad</label>
+                                <select id="country" name="country" autocomplete="country-name"
+                                    class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+                                    <option>Selecciona una ciudad</option>
+                                    <option>Cali</option>
+                                    <option>Colombia</option>
+                                    <option>Bogota</option>
+                                    <option>Cartagena</option>
+                                    <option>Choco</option>
+                                    <option>Barranquilla</option>
+                                    <option>Bucaramanga</option>
+                                    <option>Pasto</option>
+                                    <option>Tolima</option>
+                                </select>
+                            </div>
+
+                            <div class="col-span-6">
+                                <label for="street-address" class="block text-sm font-medium text-gray-700">Funciones</label>
+                                <input type="text" name="street-address" id="street-address"
+                                    autocomplete="street-address"
+                                    class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                            </div>
+
+                            <div class="col-span-6 sm:col-span-6 lg:col-span-2">
+                                <label for="city" class="block text-sm font-medium text-gray-700">Modalidad</label>
+                                <input type="text" name="city" id="city" autocomplete="address-level2"
+                                    class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                            </div>
+
+                            <div class="col-span-6 sm:col-span-3 lg:col-span-2">
+                                <label for="region" class="block text-sm font-medium text-gray-700">Experiencia
+                                </label>
+                                <select id="country" name="country" autocomplete="country-name"
+                                    class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+                                    <option>Años</option>
+                                    <option>1</option>
+                                    <option>2</option>
+                                    <option>3</option>
+                                    <option>4</option>
+                                    <option>5</option>
+                                </select>
+                            </div>
+
+                            <div class="col-span-6 sm:col-span-3 lg:col-span-2">
+                                <label for="postal-code" class="block text-sm font-medium text-gray-700">ZIP / Postal
+                                    code</label>
+                                <input type="text" name="postal-code" id="postal-code" autocomplete="postal-code"
+                                    class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="px-4 py-3 bg-gray-50 text-right sm:px-6">
+                        <button type="submit"
+                            class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Crear Vacante</button>
+                    </div>
+                </div>
+            </form>
+            <img src="../../assets/recluiterr.png" class="custom-img" width="380px">
+        </div>
+    </div>
+</div>
