agregando metodo post api- de registro reclutador

--- a/portal-empleo-frontend/src/app/login-recluiter/login-recluiter.component.html
+++ b/portal-empleo-frontend/src/app/login-recluiter/login-recluiter.component.html
@@ -4,7 +4,7 @@
         <img src="../../assets/My project-1.png" class="img-emplo">
     </div>
     <div class="login-content">
-        <form action="index.html" (ngSubmit)="login()" [formGroup]="loginForm">
+        <form action="index.html" (ngSubmit)="loginReclu()" [formGroup]="loginForm">
             <div class="custom-div"><img src="../../assets/contratos.jpg" class="custom"></div>
             <h3 class="title">Bienvenido Reclutador</h3>
             <div class="input-div one">
