--- a/portal-empleo-frontend/src/app/create-offers/create-offers.component.html
+++ b/portal-empleo-frontend/src/app/create-offers/create-offers.component.html
@@ -72,7 +72,6 @@
 </div>
 
 <div class="container-vacancy">
-
     <div class="mt-3 sm:mt-0">
         <div class="md:grid md:grid-cols-2 md:gap-2 ">
             <div class="md:col-span-5">
@@ -96,7 +95,7 @@
                                     class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
                             </div>
 
-                            <div class="col-span-6 sm:col-span-2">
+                            <div class="col-span-6 sm:col-span-3">
                                 <label for="country" class="block text-sm font-medium text-gray-700">Salario
                                     Establecido</label>
                                 <select id="country" name="country" autocomplete="country-name"
@@ -131,7 +130,8 @@
                             </div>
 
                             <div class="col-span-6">
-                                <label for="street-address" class="block text-sm font-medium text-gray-700">Funciones</label>
+                                <label for="street-address"
+                                    class="block text-sm font-medium text-gray-700">Funciones</label>
                                 <input type="text" name="street-address" id="street-address"
                                     autocomplete="street-address"
                                     class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
@@ -158,8 +158,9 @@
                             </div>
 
                             <div class="col-span-6 sm:col-span-3 lg:col-span-2">
-                                <label for="postal-code" class="block text-sm font-medium text-gray-700">ZIP / Postal
-                                    code</label>
+                                <label for="postal-code" class="block text-sm font-medium text-gray-700">Fecha De
+                                    Publicación
+                                </label>
                                 <input type="text" name="postal-code" id="postal-code" autocomplete="postal-code"
                                     class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
                             </div>
@@ -167,7 +168,8 @@
                     </div>
                     <div class="px-4 py-3 bg-gray-50 text-right sm:px-6">
                         <button type="submit"
-                            class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Crear Vacante</button>
+                            class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Crear
+                            Vacante</button>
                     </div>
                 </div>
             </form>
