--- a/portal-empleo-frontend/src/app/offers/offers.component.html
+++ b/portal-empleo-frontend/src/app/offers/offers.component.html
@@ -185,7 +185,15 @@
           <rect x="2" y="7" width="20" height="14" rx="2" ry="2" />
           <path d="M16 21V5a2 2 0 00-2-2h-4a2 2 0 00-2 2v16" />
         </svg>
-        <input type="text" placeholder="Años de experiencia">
+        <select id="country" name="country" autocomplete="country-name" placeholder="anos de experiencia"
+          class="mt-1 block py-2 border-none focus:outline-none sm:text-sm">
+          <option class="low-color">Años De Experiencia</option>
+          <option>1</option>
+          <option>2</option>
+          <option>3</option>
+          <option>4</option>
+          <option>5</option>
+        </select>
       </div>
       <div class="search-salary">
         <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" stroke="currentColor" fill="currentColor"
@@ -321,9 +329,9 @@
           <div class="searched-show">Mostrando 20 Trabajos</div>
         </div>
         <br>
-        
+
         <div class="pagination" *ngFor="let jobs of job | filterCity: filterCity | filter : filtrarEmpleo">
-          
+
           <div class="job-cards">
             <div class="job-card">
               <div class="job-card-header">
@@ -349,6 +357,6 @@
       </div>
     </div>
   </div>
-  
+
 </div>
 <pagination-controls (pageChange)="pages = $event"></pagination-controls>
